<resources>

    <string name="app_name">Stock Settings</string>
    <string name="about_title">About</string>
    <string name="camera_title">Camera Sound</string>
    <string name="camera_sound_title">Camera Sound</string>
    <string name="record_sound_title">Record Sound</string>
    <string name="focus_sound_title">Focus Sound</string>
    <string name="camera_sound_summary_off">Off</string>
    <string name="camera_sound_summary_on">On</string>
    <string name="record_sound_summary_off">Off</string>
    <string name="record_sound_summary_on">On</string>
    <string name="focus_sound_summary_off">Off</string>
    <string name="focus_sound_summary_on">On</string>
    <string name="warning_title">Warning!</string>
    <string name="warning_summary">Shutter sound is compulsory in some regions.\nPlease abide strictly by the laws, rules and regulations of your area.</string>
    <string name="cm_settings_title">CyanogenMod Settings</string>
    <string name="density_title">Screen DPI</string>
    <string name="density_error">Warning:Input Error!</string>
    <string name="density_edit_title">Adjust the DPI specified</string>
    <string name="density_edit_message">please enter a reasonable range of values(300-600)\nThis operation may lead to frequent system FC, careful revision</string>
    <string name="dialog_ok">Done!Are you sure want to reboot the phone?</string>
    <string name="dialog_message">hot reboot</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_reboot">Please restart your mobile phone manually in some time later</string>
    <string name="key_home_double_tap_action_title">Double tap home to wake off</string>
    <string name="camera_switch_title">Camera Switch</string>
    <string name="camera_switch_color_summary">Color Camera</string>
    <string name="camera_switch_miui_summary">MIUI Camera</string>
    <string name="camera_switch_cm_summary">CM Camera</string>

</resources>