<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="camera_sound_key"
            android:summaryOff="@string/camera_sound_summary_off"
            android:summaryOn="@string/camera_sound_summary_on"
            android:title="@string/camera_sound_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="record_sound_key"
            android:summaryOff="@string/record_sound_summary_off"
            android:summaryOn="@string/record_sound_summary_on"
            android:title="@string/record_sound_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="focus_sound_key"
            android:summaryOff="@string/focus_sound_summary_off"
            android:summaryOn="@string/focus_sound_summary_on"
            android:title="@string/focus_sound_title" />


        <PreferenceScreen
            android:title="@string/warning_title"
            android:summary="@string/warning_summary"
            android:enabled="false" />

</PreferenceScreen>