<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="key_home_double_tap_action"
        android:title="@string/key_home_double_tap_action_title" />

    <PreferenceScreen android:key="cm_settings_key" android:title="@string/cm_settings_title" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.settings_ex.DisplaySettings"
            android:targetPackage="com.android.settings_ex" />
    </PreferenceScreen>

    <Preference
        android:title="@string/camera_title"
        android:key="camera_key" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.xs.stocksettings.CameraSound"
                android:targetPackage="com.xs.stocksettings" />
        </Preference>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/camera_switch_entries"
        android:entryValues="@array/camera_switch_values"
        android:title="@string/camera_switch_title"
        android:key="camera_switch_key" />

    <EditTextPreference
        android:dialogTitle="@string/density_edit_title"
        android:dialogMessage="@string/density_edit_message"
        android:digits="1234567890"
        android:key="density_key"
        android:title="@string/density_title"/>

    <Preference
        android:summary="© 2015 Oneplus MIUI Tools | Powered by Xs"
        android:title="@string/about_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://weibo.com/acexs" />
    </Preference>>

</PreferenceScreen>